--- a/meat-app-starter/src/index.html
+++ b/meat-app-starter/src/index.html
@@ -23,7 +23,7 @@
   </script>
 </head>
 
-<body class="hold-transition skin-red layout-top-nav">
+<body class="hold-transition skin-red layout-top-nav layout-footer-fixed">
 
     <mt-app>Loading...</mt-app>
 
